💫 Adding a loading animation and count animation.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Welcome to my GitHub Portfolio.
                         <h1><strong>Pixrweb</strong></h1>
                         <h5>Role: Lead Developer</h5>
                         <p>Pixrweb is a website development service, that provide you with your dream website.</p><a class="hero_4_links" href="https://pixrweb.com" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
-                        <h4 class="text-center pagespeed-heading" data-website="pixrweb.com" data-score_id="0"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-0" class="score-holder">Loading...</span><span id="score-status-0"></span></h4>
+                        <h4 class="text-center pagespeed-heading" data-website="pixrweb.com" data-score_id="0"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-0" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-0"></span></h4>
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
                     </div>
                 </div>
@@ -191,7 +191,7 @@ Welcome to my GitHub Portfolio.
                         <h1><strong>Down Two Earth</strong></h1>
                         <h5>Role: Lead Developer</h5>
                         <p>Down Two Earth is a rising esports organization established and based in Pittsburgh, PA part owned by NFL Star Ryan Shazier. While maintaining classic roots to the esports world, D2E's leading focus is to enter the scene as a lifestyle brand.</p><a class="hero_4_links" href="https://d2e.gg" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
-                        <h4 class="text-center pagespeed-heading" data-website="d2e.gg" data-score_id="1">Google PageSpeed Insight Score:&nbsp;<span id="score-holder-1" class="score-holder">Loading...</span><span id="score-status-1"></span></h4>
+                        <h4 class="text-center pagespeed-heading" data-website="d2e.gg" data-score_id="1">Google PageSpeed Insight Score:&nbsp;<span id="score-holder-1" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-1"></span></h4>
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
                     </div>
                 </div>
@@ -201,7 +201,7 @@ Welcome to my GitHub Portfolio.
                         <h1><strong>London Roleplay</strong></h1>
                         <h5>Role: Lead Developer</h5>
                         <p>Welcome to the London Roleplay server. The server is ran by the community, where your voice counts. We are a roleplaying community, so if you are a serious role player, we want you to join.</p><a class="hero_4_links" href="https://londonrp.org" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
-                        <h4 class="text-center pagespeed-heading" data-website="london.org" data-score_id="2"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-2" class="score-holder">Loading...</span><span id="score-status-2"></span></h4>
+                        <h4 class="text-center pagespeed-heading" data-website="london.org" data-score_id="2"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-2" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-2"></span></h4>
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
                     </div>
                 </div>
@@ -235,7 +235,7 @@ Welcome to my GitHub Portfolio.
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
-    <script src="assets/js/index.js?h=3124da13edcc27cda81ecf179f6880c6"></script>
+    <script src="assets/js/index.js?h=3efc8c5b7b429a7f4e40baf2c5ae1785"></script>
 </body>
 
 </html>
