🥚 Added an easter egg.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Welcome to my GitHub Portfolio.
             <div class="container hero-6-container">
                 <div class="row">
                     <div class="col">
-                        <h1 class="side_font_glitch">PROJECTS I'VE WORKED ON</h1>
+                        <h2 class="side_font_glitch">PROJECTS I'VE WORKED ON THAT ARE PUBLICILY AVAILABLE</h2>
                     </div>
                 </div>
                 <div class="row hero-6-row-workholder">
@@ -234,6 +234,7 @@ Welcome to my GitHub Portfolio.
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/hello.js?h=7d1d3e498b59fe2acfc9bfd5bf61bdfa"></script>
     <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
     <script src="assets/js/index.js?h=3efc8c5b7b429a7f4e40baf2c5ae1785"></script>
 </body>
