📝Added work to Navbar

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Welcome to my GitHub Portfolio.
                             <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_1">BIO</a></li>
                             <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_3">SKILLS</a></li>
                             <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_5">DONATIONS</a></li>
+                            <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero-6">WORK</a></li>
                         </ul><span class="navbar-text actions nav_link_btn_span"> <a class="btn btn-dark btn-block action-button nav_link_btn" role="button" href="#hero_4">Contact_</a></span>
                     </div>
                 </div>
