--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=93d9f1c89d4e3e9f579292a56c4b46db">
+    <link rel="stylesheet" href="assets/css/index.css?h=0eaaad8505fef3fb35f74d0f872b92ab">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=05b670d4028768cdcb03c18a3bcca54b">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -211,7 +211,7 @@ Welcome to my GitHub Portfolio.
                     <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                         <h1 class="d-flex flex-row align-items-center"><strong>Lost Empire</strong><span class="demo_flag">DEMO</span></h1>
                         <h5>Role: Lead Developer</h5>
-                        <p>Lost Empire is a demo website I built to test out e-commerce building.<br>I've modified it from the original purpose to use Shopify's REST API.</p><a class="hero_4_links" href="https://lostempire.herokuapp.com/" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                        <p>Lost Empire is a demo website I built to test out e-commerce building.<br>I've modified it from the original purpose to use Shopify's REST API.<br>This project is open source on my GitHub profile.</p><a class="hero_4_links" href="https://lostempire.herokuapp.com/" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a><a class="hero_4_links hero_4_source_code" href="https://github.com/LTSana/lost-empire/tree/Shopify-version" target="_blank" rel="noopener">Source Code&nbsp;<i class="fas fa-external-link-alt"></i></a>
                         <h4 class="text-center pagespeed-heading" data-website="lostempire.herokuapp.com" data-score_id="3"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-3" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-3"></span></h4>
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
                     </div>
@@ -239,7 +239,7 @@ Welcome to my GitHub Portfolio.
                     </div>
                     <div class="col item social"><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-twitter"></i></a><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-instagram"></i></a></div>
                 </div>
-                <p class="copyright">LT.Sana © 2020</p>
+                <p class="copyright">LT.Sana © 2021</p>
             </div>
         </footer>
     </div>
