📝 Added PayPal email.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@ Welcome to my GitHub Portfolio.
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/icons/LT_SANA_180x180.png?h=72afe0224ae1f3d0e3a8f7821acd3b27">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icons/LT_SANA_192x192.png?h=72afe0224ae1f3d0e3a8f7821acd3b27">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/icons/LT_SANA_512x512.png?h=4abd571aaf173ceb86aed7298b69227d">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow&amp;subset=latin-ext,vietnamese">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tomorrow&amp;subset=latin-ext">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=9db842b3dc3336737559eb4abc0f1b3d">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=0d6a07403b8fe83ff73a9dcbd3ef7c0e">
     <link rel="stylesheet" href="assets/css/cyberpunk.css?h=6bfd1e16833b17175c3d665eab3edf85">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=6e66d377b57fbf572bdfd880fe42221a">
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
@@ -52,7 +52,7 @@ Welcome to my GitHub Portfolio.
             <nav class="navbar navbar-light navbar-expand-md sticky-top navigation-clean-button">
                 <div class="container-fluid"><a class="navbar-brand" href="/"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
-                        <ul class="nav navbar-nav mx-auto">
+                        <ul class="navbar-nav mx-auto">
                             <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="/">HOME</a></li>
                             <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_1">BIO</a></li>
                             <li class="nav-item"><a class="nav-link text-center text-lg-left text-xl-left nav_link" href="#hero_3">SKILLS</a></li>
@@ -147,7 +147,7 @@ Welcome to my GitHub Portfolio.
                         <h1 class="text-center text-light hero_5_heading_0 crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 d-flex flex-column justify-content-center align-items-center">
-                        <p class="text-center text-light">By donating you are supporting:<br></p>
+                        <p class="text-center text-light">By donating you are supporting:<br>PayPal: sana.mngadi@gmail.com</p>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5 col-xl-4">
                         <ul class="text-light">
@@ -244,7 +244,7 @@ Welcome to my GitHub Portfolio.
         </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/hello.js?h=7d1d3e498b59fe2acfc9bfd5bf61bdfa"></script>
     <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
     <script src="assets/js/index.js?h=3efc8c5b7b429a7f4e40baf2c5ae1785"></script>
