🐛Fixed the IG link to my Profile.

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ Welcome to my GitHub Portfolio.
                         <h3>LT.Sana</h3>
                         <p>I am a Full Stack Web Application Developer.<br>I focus on user experience on the Front-End and Application scalability on the Back-End.<br>And love to build the dreams of my Clients &amp; Employers...👨🏽‍💻<br></p>
                     </div>
-                    <div class="col item social"><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-twitter"></i></a><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-instagram"></i></a></div>
+                    <div class="col item social"><a href="https://twitter.com/LT_Sana" target="_blank" rel="noopener"><i class="icon ion-social-twitter"></i></a><a href="https://www.instagram.com/lt.sana_/" target="_blank" rel="noopener"><i class="icon ion-social-instagram"></i></a></div>
                 </div>
                 <p class="copyright">LT.Sana © 2021</p>
             </div>
