--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@ Welcome to my GitHub Portfolio.
                         <h5>Role: Lead Developer</h5>
                         <p>Pixrweb is a website development service, that provide you with your dream website.</p><a class="hero_4_links" href="https://pixrweb.com" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
                         <h4 class="text-center pagespeed-heading" data-website="pixrweb.com" data-score_id="0"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-0" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-0"></span></h4>
+                        <div class="row d-flex flex-row justify-content-center">
+                            <div class="col-lg-9 col-xl-7">
+                                <div id="chart-0"><canvas data-bss-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Score&quot;,&quot;Lost Speed&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Score&quot;,&quot;backgroundColor&quot;:[&quot;rgb(255,255,255)&quot;,&quot;rgba(255,255,255,0.1)&quot;],&quot;borderColor&quot;:[&quot;#000000&quot;,&quot;#000000&quot;],&quot;data&quot;:[&quot;0&quot;,&quot;100&quot;]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false,&quot;position&quot;:&quot;top&quot;,&quot;reverse&quot;:false},&quot;title&quot;:{&quot;position&quot;:&quot;top&quot;,&quot;display&quot;:true,&quot;text&quot;:&quot;Insight Score&quot;,&quot;fontSize&quot;:&quot;24&quot;,&quot;fontColor&quot;:&quot;#ffffff&quot;,&quot;fontFamily&quot;:&quot;Tomorrow, sans-serif&quot;}}}"></canvas></div>
+                            </div>
+                        </div>
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
                     </div>
                 </div>
@@ -193,6 +198,11 @@ Welcome to my GitHub Portfolio.
                         <h5>Role: Lead Developer</h5>
                         <p>Down Two Earth is a rising esports organization established and based in Pittsburgh, PA part owned by NFL Star Ryan Shazier. While maintaining classic roots to the esports world, D2E's leading focus is to enter the scene as a lifestyle brand.</p><a class="hero_4_links" href="https://d2e.gg" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
                         <h4 class="text-center pagespeed-heading" data-website="d2e.gg" data-score_id="1">Google PageSpeed Insight Score:&nbsp;<span id="score-holder-1" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-1"></span></h4>
+                        <div class="row d-flex flex-row justify-content-center">
+                            <div class="col-lg-9 col-xl-7">
+                                <div id="chart-1"><canvas data-bss-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Score&quot;,&quot;Lost Speed&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Score&quot;,&quot;backgroundColor&quot;:[&quot;rgb(255,255,255)&quot;,&quot;rgba(255,255,255,0.1)&quot;],&quot;borderColor&quot;:[&quot;#000000&quot;,&quot;#000000&quot;],&quot;data&quot;:[&quot;0&quot;,&quot;100&quot;]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false,&quot;position&quot;:&quot;top&quot;,&quot;reverse&quot;:false},&quot;title&quot;:{&quot;position&quot;:&quot;top&quot;,&quot;display&quot;:true,&quot;text&quot;:&quot;Insight Score&quot;,&quot;fontSize&quot;:&quot;24&quot;,&quot;fontColor&quot;:&quot;#ffffff&quot;,&quot;fontFamily&quot;:&quot;Tomorrow, sans-serif&quot;}}}"></canvas></div>
+                            </div>
+                        </div>
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
                     </div>
                 </div>
@@ -203,6 +213,11 @@ Welcome to my GitHub Portfolio.
                         <h5>Role: Lead Developer</h5>
                         <p>Welcome to the London Roleplay server. The server is ran by the community, where your voice counts. We are a roleplaying community, so if you are a serious role player, we want you to join.</p><a class="hero_4_links" href="https://londonrp.org" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
                         <h4 class="text-center pagespeed-heading" data-website="london.org" data-score_id="2"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-2" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-2"></span></h4>
+                        <div class="row d-flex flex-row justify-content-center">
+                            <div class="col-lg-9 col-xl-7">
+                                <div id="chart-2"><canvas data-bss-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Score&quot;,&quot;Lost Speed&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Score&quot;,&quot;backgroundColor&quot;:[&quot;rgb(255,255,255)&quot;,&quot;rgba(255,255,255,0.1)&quot;],&quot;borderColor&quot;:[&quot;#000000&quot;,&quot;#000000&quot;],&quot;data&quot;:[&quot;0&quot;,&quot;100&quot;]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false,&quot;position&quot;:&quot;top&quot;,&quot;reverse&quot;:false},&quot;title&quot;:{&quot;position&quot;:&quot;top&quot;,&quot;display&quot;:true,&quot;text&quot;:&quot;Insight Score&quot;,&quot;fontSize&quot;:&quot;24&quot;,&quot;fontColor&quot;:&quot;#ffffff&quot;,&quot;fontFamily&quot;:&quot;Tomorrow, sans-serif&quot;}}}"></canvas></div>
+                            </div>
+                        </div>
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
                     </div>
                 </div>
@@ -213,6 +228,11 @@ Welcome to my GitHub Portfolio.
                         <h5>Role: Lead Developer</h5>
                         <p>Lost Empire is a demo website I built to test out e-commerce building.<br>I've modified it from the original purpose to use Shopify's REST API.<br>This project is open source on my GitHub profile.</p><a class="hero_4_links" href="https://lostempire.herokuapp.com/" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a><a class="hero_4_links hero_4_source_code" href="https://github.com/LTSana/lost-empire/tree/Shopify-version" target="_blank" rel="noopener">Source Code&nbsp;<i class="fas fa-external-link-alt"></i></a>
                         <h4 class="text-center pagespeed-heading" data-website="lostempire.herokuapp.com" data-score_id="3"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-3" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-3"></span></h4>
+                        <div class="row d-flex flex-row justify-content-center">
+                            <div class="col-lg-9 col-xl-7">
+                                <div id="chart-3"><canvas data-bss-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Score&quot;,&quot;Lost Speed&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Score&quot;,&quot;backgroundColor&quot;:[&quot;rgb(255,255,255)&quot;,&quot;rgba(255,255,255,0.1)&quot;],&quot;borderColor&quot;:[&quot;#000000&quot;,&quot;#000000&quot;],&quot;data&quot;:[&quot;0&quot;,&quot;100&quot;]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false,&quot;position&quot;:&quot;top&quot;,&quot;reverse&quot;:false},&quot;title&quot;:{&quot;position&quot;:&quot;top&quot;,&quot;display&quot;:true,&quot;text&quot;:&quot;Insight Score&quot;,&quot;fontSize&quot;:&quot;24&quot;,&quot;fontColor&quot;:&quot;#ffffff&quot;,&quot;fontFamily&quot;:&quot;Tomorrow, sans-serif&quot;}}}"></canvas></div>
+                            </div>
+                        </div>
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
                     </div>
                 </div>
@@ -230,6 +250,7 @@ Welcome to my GitHub Portfolio.
                             <li><a href="#hero_1">BIO</a></li>
                             <li><a href="#hero_3">SKILLS<br></a></li>
                             <li><a href="#hero_5">DONATIONS<br></a></li>
+                            <li><a href="#hero-6">WORK<br></a></li>
                             <li><a href="#hero_4">CONTACT ME<br></a></li>
                         </ul>
                     </div>
@@ -245,9 +266,11 @@ Welcome to my GitHub Portfolio.
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
+    <script src="assets/js/bs-init.js?h=24944136186a01ba6322da1c4ad1dfbe"></script>
     <script src="assets/js/hello.js?h=7d1d3e498b59fe2acfc9bfd5bf61bdfa"></script>
     <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
-    <script src="assets/js/index.js?h=3efc8c5b7b429a7f4e40baf2c5ae1785"></script>
+    <script src="assets/js/index.js?h=3408b61e0362d553e57392b25d5a2bc4"></script>
 </body>
 
 </html>
