💄Added new project and updated profile picture
1. Update Navbar to stay at the top when scrolling.
2. Added new profile picture.
3. Added new project to projects done.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 Welcome to my GitHub Portfolio.
 ">
     <meta property="og:image" content="assets/img/icons/LT_SANA_512x512.png?h=4abd571aaf173ceb86aed7298b69227d">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/icons/LT_SANA_180x180.png?h=72afe0224ae1f3d0e3a8f7821acd3b27">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/LT_SANA_16x16.png?h=3a266f02e7645ec8ed1b94ef918333f0">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icons/LT_SANA_32x32.png?h=107a2da1422c94a9d08900b28ee720b9">
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/icons/LT_SANA_180x180.png?h=72afe0224ae1f3d0e3a8f7821acd3b27">
@@ -26,13 +27,13 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=0d6a07403b8fe83ff73a9dcbd3ef7c0e">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css?h=c1c8b08f8e093bbf2ff10464a2cce6e7">
     <link rel="stylesheet" href="assets/css/cyberpunk.css?h=6bfd1e16833b17175c3d665eab3edf85">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css?h=6e66d377b57fbf572bdfd880fe42221a">
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=0eaaad8505fef3fb35f74d0f872b92ab">
+    <link rel="stylesheet" href="assets/css/index.css?h=8dddb48980c109b0d0949b79e7ec29b9">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=05b670d4028768cdcb03c18a3bcca54b">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -49,7 +50,7 @@ Welcome to my GitHub Portfolio.
 <body>
     <div id="main_div">
         <section id="hero_0">
-            <nav class="navbar navbar-light navbar-expand-md sticky-top navigation-clean-button">
+            <nav class="navbar navbar-light navbar-expand-md fixed-top navigation-clean-button">
                 <div class="container-fluid"><a class="navbar-brand" href="/"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav mx-auto">
@@ -66,7 +67,7 @@ Welcome to my GitHub Portfolio.
         <section id="hero_1">
             <div class="container">
                 <div class="row d-flex flex-column justify-content-center align-items-center align-content-center">
-                    <div class="col-8 col-sm-5 col-md-3 col-lg-3 col-xl-2"><img class="rounded-circle img-fluid" id="profile_picture" src="https://avatars.githubusercontent.com/LTSana" width="100%" alt="profile_picture"></div>
+                    <div class="col-8 col-sm-5 col-md-3 col-lg-3 col-xl-2"><img class="rounded-circle img-fluid" id="profile_picture" src="assets/img/ProfilePicture/0Sana2.jpg?h=2f9d3bbd9d7c1789f47e94c3b7967abe" width="100%" alt="profile_picture"></div>
                     <div class="col-sm-9 col-md-6 col-lg-5 col-xl-3">
                         <h1 class="text-center text-light hero_1_heading_0 crazy_font_glitch">Hi, I'm Sana</h1>
                     </div>
@@ -216,6 +217,21 @@ Welcome to my GitHub Portfolio.
                         <div class="row d-flex flex-row justify-content-center">
                             <div class="col-lg-9 col-xl-7">
                                 <div id="chart-2"><canvas data-bss-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Score&quot;,&quot;Lost Speed&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Score&quot;,&quot;backgroundColor&quot;:[&quot;rgb(255,255,255)&quot;,&quot;rgba(255,255,255,0.1)&quot;],&quot;borderColor&quot;:[&quot;#000000&quot;,&quot;#000000&quot;],&quot;data&quot;:[&quot;0&quot;,&quot;100&quot;]},{&quot;label&quot;:&quot;&quot;,&quot;backgroundColor&quot;:[],&quot;borderColor&quot;:[],&quot;data&quot;:[]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false,&quot;position&quot;:&quot;top&quot;,&quot;reverse&quot;:false},&quot;title&quot;:{&quot;position&quot;:&quot;top&quot;,&quot;display&quot;:true,&quot;text&quot;:&quot;Insight Score&quot;,&quot;fontSize&quot;:&quot;24&quot;,&quot;fontColor&quot;:&quot;#ffffff&quot;,&quot;fontFamily&quot;:&quot;Tomorrow, sans-serif&quot;}}}"></canvas></div>
+                            </div>
+                        </div>
+                        <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
+                    </div>
+                </div>
+                <div class="row hero-6-row-workholder">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-start align-items-center"><img src="assets/img/showcase/newliferoleplay.png?h=ddeaee33913287f4108f75e4cefde57e" width="90%"></div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        <h1><strong>New Life Roleplay</strong></h1>
+                        <h5>Role: Lead Developer</h5>
+                        <p>Welcome to New-Life Roleplay, are you sick and tired of everyday life looking for somewhere to chillout and relax and roleplay as a virtual character of your choice? Well New-Life Roleplay could be the server for you. We are a close friend/family run serious role play server, with a highly dedicated around the clock staff team to ensure all rules are being followed and that our members are having as much fun as possible.</p><a class="hero_4_links" href="https://nlrp.store/" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                        <h4 class="text-center pagespeed-heading" data-website="nlrp.store" data-score_id="4"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-4" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-4"></span></h4>
+                        <div class="row d-flex flex-row justify-content-center">
+                            <div class="col-lg-9 col-xl-7">
+                                <div id="chart-4"><canvas data-bss-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Score&quot;,&quot;Lost Speed&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Score&quot;,&quot;backgroundColor&quot;:[&quot;rgb(255,255,255)&quot;,&quot;rgba(255,255,255,0.1)&quot;],&quot;borderColor&quot;:[&quot;#000000&quot;,&quot;#000000&quot;],&quot;data&quot;:[&quot;0&quot;,&quot;100&quot;]},{&quot;label&quot;:&quot;&quot;,&quot;backgroundColor&quot;:[],&quot;borderColor&quot;:[],&quot;data&quot;:[]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false,&quot;position&quot;:&quot;top&quot;,&quot;reverse&quot;:false},&quot;title&quot;:{&quot;position&quot;:&quot;top&quot;,&quot;display&quot;:true,&quot;text&quot;:&quot;Insight Score&quot;,&quot;fontSize&quot;:&quot;24&quot;,&quot;fontColor&quot;:&quot;#ffffff&quot;,&quot;fontFamily&quot;:&quot;Tomorrow, sans-serif&quot;}}}"></canvas></div>
                             </div>
                         </div>
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
