--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ Welcome to my GitHub Portfolio.
             <div class="container hero-6-container">
                 <div class="row">
                     <div class="col">
-                        <h2 class="side_font_glitch">PROJECTS I'VE WORKED ON THAT ARE PUBLICILY AVAILABLE</h2>
+                        <h2 class="side_font_glitch">PROJECTS I'VE WORKED ON THAT ARE PUBLICLY AVAILABLE</h2>
                     </div>
                 </div>
                 <div class="row hero-6-row-workholder">
