--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>LT.Sana</title>
-    <meta name="twitter:image" content="assets/img/icons/LT_SANA_512x512.png?h=4abd571aaf173ceb86aed7298b69227d">
+    <title>Sana</title>
+    <meta name="theme-color" content="#404040">
+    <meta name="twitter:image" content="assets/img/icons/512.png?h=494c914e147a6321b81a389cfafdc046">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="LT.Sana GitHub">
     <meta property="og:type" content="website">
@@ -14,14 +15,15 @@
     <meta name="twitter:description" content="HI, I'm Sana.
 Welcome to my GitHub Portfolio.
 ">
-    <meta property="og:image" content="assets/img/icons/LT_SANA_512x512.png?h=4abd571aaf173ceb86aed7298b69227d">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/icons/LT_SANA_180x180.png?h=72afe0224ae1f3d0e3a8f7821acd3b27">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/LT_SANA_16x16.png?h=3a266f02e7645ec8ed1b94ef918333f0">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icons/LT_SANA_32x32.png?h=107a2da1422c94a9d08900b28ee720b9">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/icons/LT_SANA_180x180.png?h=72afe0224ae1f3d0e3a8f7821acd3b27">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icons/LT_SANA_192x192.png?h=72afe0224ae1f3d0e3a8f7821acd3b27">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/icons/LT_SANA_512x512.png?h=4abd571aaf173ceb86aed7298b69227d">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
+    <meta property="og:image" content="assets/img/icons/512.png?h=494c914e147a6321b81a389cfafdc046">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/icons/180.png?h=08ff80aca75ec34233c04bcbe15c249b">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/icons/16.png?h=39ade4340c1a881a202874f411feef3f">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/icons/32.png?h=08ff80aca75ec34233c04bcbe15c249b">
+    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/icons/180.png?h=08ff80aca75ec34233c04bcbe15c249b">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/icons/192.png?h=2502baa5d28e4c63002553e3e8fc20a0">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/icons/512.png?h=494c914e147a6321b81a389cfafdc046">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css">
+    <link rel="manifest" href="manifest.json?h=3a7e8215bcfc3bb43d99fac45ca65346">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow&amp;subset=latin-ext,vietnamese">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tomorrow&amp;subset=latin-ext">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
@@ -31,8 +33,8 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="assets/css/glitch_font.css?h=f033b14b45f1173da609df14db3cbde8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
-    <link rel="stylesheet" href="assets/css/index.css?h=6fa088502b1cfe3fb5fb44c8285240ce">
-    <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=05b670d4028768cdcb03c18a3bcca54b">
+    <link rel="stylesheet" href="assets/css/index.css?h=43ec68ba6fa3c6d2c51c688dc3f6235b">
+    <link rel="stylesheet" href="assets/css/Navigation-with-Button.css?h=0ccf4878da7b3eb9e93a39754d06eb35">
     <link rel="stylesheet" href="assets/css/styles.css?h=a2ca0f1d55872ade1b7481d7e4bdee5f">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVTXW6GVE5"></script>
@@ -86,7 +88,7 @@ Welcome to my GitHub Portfolio.
                     </div>
                     <div class="col-10 col-sm-12 col-md-7 offset-1 offset-sm-0 offset-md-0 offset-xl-0 hero_2_col_0">
                         <h2 class="text-center text-light hero_2_heading_1 side_font_glitch" style="font-family: Tomorrow, sans-serif;letter-spacing: 0px;">ABOUT ME_ 💬<br></h2>
-                        <p class="text-light">My name is Sana N. Mngadi, but you can call me Sana.<br><br>Originating from Swaziland 🇸🇿, learning and improving my skill set in Web Application Development and soon moving into the Mobile App development field.<br><br>I strive to create elegant solutions that surprise and delight users, while keeping complex technical dependencies in mind for implementation, scalability and developer sanity.<br><br>I'm still a young Padawan in the world I fight to thrive in. I believe everyone has a dream of a WebApp they wish to make and I am here to help make it a reality</p>
+                        <p class="text-light">My name is Sana N. Mngadi, but you can call me Sana.<br><br>Originating from Swaziland 🇸🇿, learning and improving my skill set in Web Application Development.<br><br>I strive to create elegant solutions that surprise and delight users, while keeping complex technical dependencies in mind for implementation, scalability and developer sanity.<br><br>I'm still a young Padawan in the world I fight to thrive in. I believe everyone has a dream of a WebApp they wish to make and I am here to help make it a reality</p>
                     </div>
                 </div>
             </div>
@@ -110,6 +112,7 @@ Welcome to my GitHub Portfolio.
                         <p class="devicon-python-plain-wordmark skill-icons"></p>
                         <p class="devicon-sass-original skill-icons"></p>
                         <p class="devicon-github-original skill-icons"></p>
+                        <p class="devicon-google-original skill-icons"></p>
                     </div>
                 </div>
             </div>
@@ -220,7 +223,7 @@ Welcome to my GitHub Portfolio.
                         <h1><strong>New Life Roleplay</strong></h1>
                         <h5>Role: Lead Developer</h5>
                         <p>Welcome to New-Life Roleplay, are you sick and tired of everyday life looking for somewhere to chillout and relax and roleplay as a virtual character of your choice? Well New-Life Roleplay could be the server for you. We are a close friend/family run serious role play server, with a highly dedicated around the clock staff team to ensure all rules are being followed and that our members are having as much fun as possible.</p><a class="hero_4_links" href="https://nlrp.store/" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
-                        <h4 class="text-center pagespeed-heading" data-website="nlrp.store" data-score_id="4"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-4" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-4"></span></h4>
+                        <h4 class="text-center pagespeed-heading" data-website="nlrp.store/" data-score_id="4"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-4" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-4"></span></h4>
                         <div class="row d-flex flex-row justify-content-center">
                             <div class="col-lg-9 col-xl-7">
                                 <div id="chart-4"><canvas data-bss-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Score&quot;,&quot;Lost Speed&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Score&quot;,&quot;backgroundColor&quot;:[&quot;rgb(255,255,255)&quot;,&quot;rgba(255,255,255,0.1)&quot;],&quot;borderColor&quot;:[&quot;#000000&quot;,&quot;#000000&quot;],&quot;data&quot;:[&quot;0&quot;,&quot;100&quot;]},{&quot;label&quot;:&quot;&quot;,&quot;backgroundColor&quot;:[],&quot;borderColor&quot;:[],&quot;data&quot;:[]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false,&quot;position&quot;:&quot;top&quot;,&quot;reverse&quot;:false,&quot;labels&quot;:{&quot;fontStyle&quot;:&quot;normal&quot;}},&quot;title&quot;:{&quot;position&quot;:&quot;top&quot;,&quot;display&quot;:true,&quot;text&quot;:&quot;Insight Score&quot;,&quot;fontSize&quot;:24,&quot;fontColor&quot;:&quot;#ffffff&quot;,&quot;fontFamily&quot;:&quot;Tomorrow, sans-serif&quot;,&quot;fontStyle&quot;:&quot;normal&quot;}}}"></canvas></div>
@@ -259,6 +262,21 @@ Welcome to my GitHub Portfolio.
                         <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
                     </div>
                 </div>
+                <div class="row hero-6-row-workholder">
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-start align-items-center"><img src="assets/img/showcase/project_feelinggood.png?h=77bfc30ed912a576bb3a1a3fa9e13f00" width="90%"></div>
+                    <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        <h1 class="d-flex flex-row align-items-center"><strong>Feeling Good Company</strong></h1>
+                        <h5>Role: Lead Developer</h5>
+                        <p>The Ouro Verde Project is a vertically integrated agro-industry project in Cabo Delgado Province, Mozambique that involves organically certified cane, cashew and moringa growing, processing, packaging and sales of natural whole cane sugar, cashew kernels and moringa powder.</p><a class="hero_4_links" href="https://www.feelinggood.company/" target="_blank" rel="noopener">Visit Website&nbsp;<i class="fas fa-external-link-alt"></i></a>
+                        <h4 class="text-center pagespeed-heading" data-website="feelinggood.company" data-score_id="6"><strong>Google&nbsp;</strong>PageSpeed Insight Score:&nbsp;<span id="score-holder-6" class="score-holder crazy_font_glitch">Loading...</span><span id="score-status-6"></span></h4>
+                        <div class="row d-flex flex-row justify-content-center">
+                            <div class="col-lg-9 col-xl-7">
+                                <div id="chart-6"><canvas data-bss-chart="{&quot;type&quot;:&quot;doughnut&quot;,&quot;data&quot;:{&quot;labels&quot;:[&quot;Score&quot;,&quot;Lost Speed&quot;],&quot;datasets&quot;:[{&quot;label&quot;:&quot;Score&quot;,&quot;backgroundColor&quot;:[&quot;rgb(255,255,255)&quot;,&quot;rgba(255,255,255,0.1)&quot;],&quot;borderColor&quot;:[&quot;#000000&quot;,&quot;#000000&quot;],&quot;data&quot;:[&quot;0&quot;,&quot;100&quot;]},{&quot;label&quot;:&quot;&quot;,&quot;backgroundColor&quot;:[],&quot;borderColor&quot;:[],&quot;data&quot;:[]}]},&quot;options&quot;:{&quot;maintainAspectRatio&quot;:true,&quot;legend&quot;:{&quot;display&quot;:false,&quot;position&quot;:&quot;top&quot;,&quot;reverse&quot;:false,&quot;labels&quot;:{&quot;fontStyle&quot;:&quot;normal&quot;}},&quot;title&quot;:{&quot;position&quot;:&quot;top&quot;,&quot;display&quot;:true,&quot;text&quot;:&quot;Insight Score&quot;,&quot;fontSize&quot;:24,&quot;fontColor&quot;:&quot;#ffffff&quot;,&quot;fontFamily&quot;:&quot;Tomorrow, sans-serif&quot;,&quot;fontStyle&quot;:&quot;normal&quot;}}}"></canvas></div>
+                            </div>
+                        </div>
+                        <p class="text-center hero-6-par-score-guide">The score scale.<br><span class="score-low"><strong>(0-49 low)</strong></span><span class="score-medium"><strong>(50-89 medium)</strong></span><span class="score-good"><strong>(90-100 high)</strong></span><br>The score changes depending on the server host and region.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
@@ -287,13 +305,13 @@ Welcome to my GitHub Portfolio.
             </div>
         </footer>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>
     <script src="assets/js/bs-init.js?h=24944136186a01ba6322da1c4ad1dfbe"></script>
     <script src="assets/js/hello.js?h=7d1d3e498b59fe2acfc9bfd5bf61bdfa"></script>
     <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
-    <script src="assets/js/index.js?h=a654b30658da751221575e6ccc0021e6"></script>
+    <script src="assets/js/index.js?h=f6336aea2a802aa9378d22510885c211"></script>
 </body>
 
 </html>
