💄Changed the box size.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Welcome to my GitHub Portfolio.
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
     <link rel="stylesheet" href="assets/css/global/Navigation-with-Button.css?h=332b8d51234d071cdae6ef28ed924132">
     <link rel="stylesheet" href="assets/css/global/styles.css?h=6a60b2984075f60987a3cd3ddce645fa">
-    <link rel="stylesheet" href="assets/css/pages/index.css?h=5d40bd7c7ecb4737c9c6386041e52adf">
+    <link rel="stylesheet" href="assets/css/pages/index.css?h=dde8e5ec1067f271c95a3eb9c44da597">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVTXW6GVE5"></script>
 <script>
@@ -95,8 +95,8 @@ Welcome to my GitHub Portfolio.
             </div>
         </section>
         <section id="hero_3">
-            <div class="container hero_3_container0">
-                <div class="row d-flex flex-column justify-content-start align-items-center">
+            <div class="container">
+                <div class="row no-gutters d-flex flex-column justify-content-start align-items-center hero_3_container_0">
                     <div class="col-xl-12">
                         <h2 class="text-center text-light hero_3_heading_0">I have experience in these fields<span class="crazy_font_glitch">_</span></h2>
                     </div>
@@ -121,7 +121,7 @@ Welcome to my GitHub Portfolio.
         </section>
         <section id="hero_4">
             <div class="container">
-                <div class="row hero_4_row_0">
+                <div class="row no-gutters hero_4_row_0">
                     <div class="col d-flex flex-column align-items-center">
                         <h2 class="text-center text-light hero_4_heading_0 side_font_glitch">CONTACT ME_&nbsp;📫</h2>
                         <p class="text-center text-light d-flex flex-column flex-md-row flex-lg-row flex-xl-row hero_4_par_0">Get in touch by emailing&nbsp;<a id="contactme_link" href="mailto:snm.developer@gmail.com?subject=Hello!">
@@ -140,7 +140,7 @@ Welcome to my GitHub Portfolio.
         </section>
         <section id="hero_5">
             <div class="container">
-                <div class="row hero_5_row_0">
+                <div class="row no-gutters hero_5_row_0">
                     <div class="col-10 col-sm-12 col-md-12 col-lg-4 col-xl-5 offset-1 offset-sm-0 d-flex flex-column align-items-center align-content-center flex-sm-column flex-md-column flex-lg-row flex-xl-row">
                         <h1 class="text-center text-light hero_5_heading_0 crazy_font_glitch">WISH TO MAKE A DONATION?</h1>
                     </div>
@@ -179,7 +179,8 @@ Welcome to my GitHub Portfolio.
                             <li><a href="#hero_1">BIO</a></li>
                             <li><a href="#hero_3">SKILLS<br></a></li>
                             <li><a href="#hero_5">DONATIONS<br></a></li>
-                            <li><a href="#hero-6">WORK<br></a></li>
+                            <li><a href="prices.html">PRICES<br></a></li>
+                            <li><a href="work.html">WORK<br></a></li>
                             <li><a href="#hero_4">CONTACT ME<br></a></li>
                         </ul>
                     </div>
