--- a/work.html
+++ b/work.html
@@ -206,7 +206,8 @@ Welcome to my GitHub Portfolio.
                             <li><a href="#hero_1">BIO</a></li>
                             <li><a href="#hero_3">SKILLS<br></a></li>
                             <li><a href="#hero_5">DONATIONS<br></a></li>
-                            <li><a href="#hero-6">WORK<br></a></li>
+                            <li><a href="prices.html">PRICES<br></a></li>
+                            <li><a href="work.html">WORK<br></a></li>
                             <li><a href="#hero_4">CONTACT ME<br></a></li>
                         </ul>
                     </div>
