--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
     <link rel="stylesheet" href="assets/css/global/Navigation-Clean.css?h=1dc4face1678c181b6409399c2bca659">
     <link rel="stylesheet" href="assets/css/global/styles.css?h=cc60b0aba363e44861de80478128eb02">
+    <link rel="stylesheet" href="assets/css/pages/contact.css?h=92db2672f5de84ebe48a846c49954820">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DVTXW6GVE5"></script>
 <script>
@@ -60,18 +61,31 @@
                         <li class="nav-item"><a class="nav-link text-center" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link text-center" href="/work.html">work</a></li>
                         <li class="nav-item"><a class="nav-link text-center" href="/prices.html">Prices</a></li>
-                        <li class="nav-item"><a class="nav-link text-center" href="/contact.html">Contact Me</a></li>
+                        <li class="nav-item"><a class="nav-link text-center active" href="/contact.html">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </section>
-    <div class="d-flex flex-column justify-content-center" id="main-div">
+    <div id="main-div">
         <section id="hero-1">
-            <div class="container">
+            <div class="container-fluid d-flex flex-column justify-content-between">
                 <div class="row">
                     <div class="col">
-                        <h1 class="text-center text-dark">404<br>You have fallen into a dark hole.<br>There's nothing here for you.</h1>
+                        <h1 class="text-white" id="time-info-greeting">Good Evening,</h1>
+                        <h1 class="text-dark d-flex flex-column align-items-start flex-md-row"><strong>Would you like to&nbsp;</strong><a class="send-me-message" href="mailto:snm.developer@gmail.com?subject=Hello!"><strong>send me a message?</strong></a></h1>
+                    </div>
+                </div>
+                <div class="row d-flex flex-row-reverse flex-sm-row">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex flex-row justify-content-end align-items-center justify-content-sm-start">
+                        <p class="social-connections"><a href="https://discordapp.com/users/LT.Sana#9372" target="_blank"><i class="fab fa-discord"></i></a></p>
+                        <p class="social-connections"><a href="https://github.com/LTSana" target="_blank"><i class="fab fa-github"></i></a></p>
+                        <p class="social-connections"><a href="https://www.linkedin.com/in/sana-n-mngadi/" target="_blank"><i class="fab fa-linkedin"></i></a></p>
+                        <p class="social-connections"><a href="https://twitter.com/LT_Sana" target="_blank"><i class="fab fa-twitter"></i></a></p>
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6 d-flex flex-column justify-content-end align-items-start align-items-sm-end">
+                        <p>snm.developer@gmail.com</p>
+                        <p>Lefke, North Cyprus</p>
                     </div>
                 </div>
             </div>
@@ -85,6 +99,7 @@
     <script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js?h=5488c86a1260428f0c13c0f8fb06bf6a"></script>
     <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
+    <script src="assets/js/pages/contact.js?h=cc5c0809661b1019695ef31e234c6bde"></script>
 </body>
 
 </html>
