--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/favicon/180.png?h=aba6d94950a10405bc340c7b496adaf4">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/192.png?h=2eed15bb86f3a52c2d4177dab3f1e74d">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/512.png?h=d87cc96c7e76e2ab4d6cb2682fbffc1b">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=f07d191a0ab4bcf5f989428256f76ac0">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=1d5dcdc7c30f061713e46f9b25c5efcf">
     <link rel="manifest" href="manifest.json?h=a919ad1bc50100369e266d1c45fea2f5">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aguafina+Script&amp;display=swap">
@@ -141,7 +141,7 @@
                             </svg>&nbsp;My Goals</h1>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 col-xl-6 info-col">
-                        <p class="text-white">Helping brands craft meaningful digital products through data driven UX design &amp; creative front end development.</p>
+                        <p class="text-white">Helping brands craft meaningful digital products through data driven UX design &amp; creative back-end development.</p>
                     </div>
                 </div>
                 <div class="row hero-3-rows">
@@ -176,6 +176,9 @@
                         <div class="row">
                             <div class="col-xl-12">
                                 <p class="text-white">CS50W&nbsp;<span class="text-muted">Harvard</span></p>
+                            </div>
+                            <div class="col-xl-12">
+                                <p class="text-white">WeThinkCode_&nbsp;<span class="text-muted">Cape Town</span></p>
                             </div>
                         </div>
                     </div>
