Added Google Cloud to my recognitions

--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
                             <div class="col-xl-12">
                                 <p class="text-white">WeThinkCode_&nbsp;<span class="text-muted">Cape Town</span></p>
                             </div>
+                            <div class="col-xl-12">
+                                <p class="text-white">Google Cloud&nbsp;<span class="text-muted">Google</span></p>
+                            </div>
                         </div>
                     </div>
                 </div>
